force-app/main/default/objects/OPTIVA_Recipe__c/OPTIVA_Recipe__c.object-meta.xml
<CustomObject>
    <label>OPTIVA Recipe</label>
    <nameField>
        <label>OPTIVA Recipes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OPTIVA Recipes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>