force-app/main/default/objects/OPTIVA_Recipe__c/fields/Allergen_Status_Required__c.field-meta.xml
<CustomField>
    <fullName>Allergen_Status_Required__c</fullName>
    <label>Allergen Status Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>