force-app/main/default/objects/OPTIVA_Recipe__c/fields/Dosage_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Guidelines__c</fullName>
    <label>Dosage Guidelines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>