force-app/main/default/objects/OPTIVA_Recipe__c/fields/End_Application__c.field-meta.xml
<CustomField>
    <fullName>End_Application__c</fullName>
    <label>End Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>