force-app/main/default/objects/OPTIVA_Recipe__c/fields/End_Use_Category__c.field-meta.xml
<CustomField>
    <fullName>End_Use_Category__c</fullName>
    <label>End Use Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>