force-app/main/default/objects/OPTIVA_Recipe__c/fields/LEGACYCODE__c.field-meta.xml
<CustomField>
    <fullName>LEGACYCODE__c</fullName>
    <label>LEGACYCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>