force-app/main/default/objects/OPTIVA_Recipe__c/fields/Legal_status__c.field-meta.xml
<CustomField>
    <fullName>Legal_status__c</fullName>
    <label>Legal status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>