force-app/main/default/objects/OPTIVA_Recipe__c/fields/Mfg_Date__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Date__c</fullName>
    <label>Manufacturing Date</label>
    <type>Date</type>
</CustomField>