force-app/main/default/objects/OPTIVA_Recipe__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <label>MOQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>