force-app/main/default/objects/OPTIVA_Recipe__c/fields/PHYSICAL_FORM__c.field-meta.xml
<CustomField>
    <fullName>PHYSICAL_FORM__c</fullName>
    <label>PHYSICAL FORM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIQUID</fullName>
            </value>
            <value>
                <fullName>WATER</fullName>
            </value>
            <value>
                <fullName>Natural Identical</fullName>
            </value>
            <value>
                <fullName>FLAVORED WATER/ FRUIT JUICE</fullName>
            </value>
            <value>
                <fullName>BEVERAGE/CSD/ENERGY DRINK</fullName>
            </value>
            <value>
                <fullName>Beverage</fullName>
            </value>
            <value>
                <fullName>Powder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>