force-app/main/default/objects/OPTIVA_Recipe__c/fields/Product_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Product_Visibility__c</fullName>
    <label>Product Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>