force-app/main/default/objects/OPTIVA_Recipe__c/fields/Receipe_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Receipe_Created_By__c</fullName>
    <label>Receipe Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>