force-app/main/default/objects/OPTIVA_Recipe__c/fields/Receipe_Last_Modify_By__c.field-meta.xml
<CustomField>
    <fullName>Receipe_Last_Modify_By__c</fullName>
    <label>Receipe Last Modify By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>