force-app/main/default/objects/OPTIVA_Recipe__c/fields/Recipe_Description__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Description__c</fullName>
    <label>Recipe Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>