force-app/main/default/objects/OPTIVA_Recipe__c/fields/Recipe_Family__c.field-meta.xml
<CustomField>
    <fullName>Recipe_Family__c</fullName>
    <label>Recipe Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPD</fullName>
            </value>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>Natural colour</fullName>
                <label>COLOR</label>
            </value>
            <value>
                <fullName>FLAVOUR</fullName>
            </value>
            <value>
                <fullName>PLANT BASED</fullName>
            </value>
            <value>
                <fullName>R&amp;D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>