force-app/main/default/objects/OPTIVA_Recipe__c/fields/Regulatory__c.field-meta.xml
<CustomField>
    <fullName>Regulatory__c</fullName>
    <label>Regulatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>