force-app/main/default/objects/OPTIVA_Recipe__c/fields/SALES_CODE__c.field-meta.xml
<CustomField>
    <fullName>SALES_CODE__c</fullName>
    <label>SALES CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>