force-app/main/default/objects/OPTIVA_Recipe__c/fields/Shelf_Life__c.field-meta.xml
<CustomField>
    <fullName>Shelf_Life__c</fullName>
    <label>Shelf Life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>