force-app/main/default/objects/OPTIVA_Recipe__c/fields/Show_Product_Button__c.field-meta.xml
<CustomField>
    <fullName>Show_Product_Button__c</fullName>
    <formula>OR($Profile.Name = &apos;Custom Admin&apos;, $Profile.Name = &apos;System Administrator&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Product Button</label>
    <type>Checkbox</type>
</CustomField>