force-app/main/default/objects/OPTIVA_Recipe__c/fields/SOLUBILITY__c.field-meta.xml
<CustomField>
    <fullName>SOLUBILITY__c</fullName>
    <label>SOLUBILITY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>