force-app/main/default/objects/OPTIVA_Recipe__c/fields/SSC_Code__c.field-meta.xml
<CustomField>
    <fullName>SSC_Code__c</fullName>
    <externalId>true</externalId>
    <label>SSC Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>