force-app/main/default/objects/OPTIVA_Recipe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SSC_Code__c</columns>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Recipe_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>